# ircd-ratbox

./: Makefile.am  Makefile.in  configure  configure.ac
.github/workflows/: ci.yml
contrib/: Makefile.am  Makefile.in
include/: setup.h.in
libratbox/: configure  configure.ac
libratbox/include/: ratbox_lib.h
libratbox/src/: arc4random.c  commio.c  crypt.c  devpoll.c  epoll.c  event.c  gnutls.c  helper.c  kqueue.c  linebuf.c  mbedtls.c  nossl.c  openssl.c  patricia.c  poll.c  ports.c  ratbox_lib.c  rawbuf.c  rb_memory.c  rb_tools.c  select.c  snprintf.c  unix.c  win32.c
modules/: Makefile.am  Makefile.in  m_accept.c  m_admin.c  m_adminwall.c  m_away.c  m_cap.c  m_capab.c  m_close.c  m_cmessage.c  m_connect.c  m_dline.c  m_encap.c  m_gline.c  m_gungline.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_ping.c  m_pong.c  m_post.c  m_rehash.c  m_restart.c  m_resv.c  m_services.c  m_set.c  (+17 more)
modules/core/: m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_squit.c
resolver/: resolver.c
src/: Makefile.am  Makefile.in  bandbi.c  cache.c  channel.c  class.c  client.c  dns.c  getopt.c  hash.c  hook.c  hostmask.c  ipv4_from_ipv6.c  ircd.c  ircd_signal.c  listener.c  match.c  modules.c  monitor.c  newconf.c  operhash.c  packet.c  parse.c  reject.c  s_auth.c  s_conf.c  s_log.c  s_newconf.c  s_serv.c  s_user.c  scache.c  send.c  services.c  sslproc.c  substitution.c  supported.c  whowas.c
ssld/: ssld.c
